<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>l0st3d</groupId>
  <artifactId>clojure-example-web-project</artifactId>
  <version>0.4.2</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>http://repo1.maven.org/maven2</url>
    </repository>
    <repository>
      <id>clojure-snapshots</id>
      <url>http://build.clojure.org/snapshots</url>
    </repository>
    <repository>
      <id>clojure</id>
      <url>http://build.clojure.org/releases</url>
    </repository>
    <repository>
      <id>clojars</id>
      <url>http://clojars.org/repo/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>clojure</artifactId>
      <version>1.2.0</version>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>clojure-contrib</artifactId>
      <version>1.2.0</version>
    </dependency>
    <dependency>
      <groupId>compojure</groupId>
      <artifactId>compojure</artifactId>
      <version>0.4.1</version>
    </dependency>
    <dependency>
      <groupId>ring</groupId>
      <artifactId>ring-jetty-adapter</artifactId>
      <version>0.3.5</version>
    </dependency>
    <dependency>
      <groupId>ring</groupId>
      <artifactId>ring-devel</artifactId>
      <version>0.3.5</version>
    </dependency>
    <dependency>
      <groupId>swank-clojure</groupId>
      <artifactId>swank-clojure</artifactId>
      <version>1.2.1</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId> 
      <artifactId>mysql-connector-java</artifactId> 
      <version>5.1.12</version> 
    </dependency>
    <dependency>
      <groupId>enlive</groupId>
      <artifactId>enlive</artifactId>
      <version>1.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>1.6</version>
    </dependency>
    <dependency>
      <groupId>clojureql</groupId>
      <artifactId>clojureql</artifactId>
      <version>1.0.1</version>
      <exclusions>
				<exclusion>
					<groupId>org.apache.derby</groupId>
					<artifactId>derby</artifactId>
				</exclusion>
				<exclusion>
					<groupId>postgresql</groupId>
					<artifactId>postgresql</artifactId>
				</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>c3p0</groupId>
      <artifactId>c3p0</artifactId>
      <version>0.9.1.2</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.16</version>
    </dependency>
    <dependency>
      <groupId>mycroft</groupId>
      <artifactId>mycroft</artifactId>
      <version>0.0.2</version>
    </dependency>
    <dependency>
      <groupId>clojure-refactoring</groupId>
      <artifactId>clojure-refactoring</artifactId>
      <version>0.5.0</version>
    </dependency>
	</dependencies>

	<build>
		<defaultGoal>verify site</defaultGoal>
		<resources>
			<resource>
				<directory>src/main/clojure</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/generated-sources/</directory>
			</resource>
			<resource>
				<directory>scripts</directory>
			</resource>
			<resource>
				<directory>db-migrations</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.theoryinpractise</groupId>
				<artifactId>clojure-maven-plugin</artifactId>
				<version>1.3.5</version>
				<configuration>
					<clojureOptions>-Xmx1024m -XX:MaxPermSize=256m</clojureOptions>
					<compileDeclaredNamespaceOnly>true</compileDeclaredNamespaceOnly>
					<copyAllCompiledNamespaces>true</copyAllCompiledNamespaces>
					<script>src/main/clojure/infrastructure/boot_dev_env.clj</script>
					<namespaces>
						<namespace>infrastructure.boot</namespace>
					</namespaces>
					<sourceDirectories>
						<sourceDirectory>src/main/clojure</sourceDirectory>
						<sourceDirectory>src/main/generated-sources/clojure</sourceDirectory>
						<sourceDirectory>src/main/resources</sourceDirectory>
						<sourceDirectory>src/test/clojure</sourceDirectory>
						<sourceDirectory>src/integration-test/clojure</sourceDirectory>
					</sourceDirectories>
					<testSourceDirectories>
						<testSourceDirectory>src/test/clojure</testSourceDirectory>
						<testSourceDirectory>src/integration-test/clojure</testSourceDirectory>
					</testSourceDirectories>
				</configuration>
				<executions>
					<execution>
						<id>compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>run-clojure-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<testScript>src/test/clojure/infrastructure/run_unit_tests.clj</testScript>
						</configuration>	      
					</execution>
					<execution>
						<id>run-integration-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<testScript>src/test/clojure/infrastructure/run_integration_tests.clj</testScript>
							<testSourceDirectories>
								<testSourceDirectory>src/test/clojure</testSourceDirectory>
								<testSourceDirectory>src/integration-test/clojure</testSourceDirectory>
							</testSourceDirectories>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2-beta-5</version>
				<executions>
					<execution>
						<id>create-executable-jar</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<archive>
								<manifest>
									<mainClass>infrastructure.boot</mainClass>
								</manifest>
							</archive>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<id>flatten-db</id>
						<phase>clean</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>scripts/flatten-db</executable>
						</configuration>
					</execution>
					<execution>
						<id>make-directories</id>
						<phase>initialize</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>	      
							<executable>mkdir</executable>
							<arguments>
								<argument>-p</argument>
								<argument>target/resources/web/public</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>generate-version</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>scripts/generate-build-version.sh</executable>
						</configuration>
					</execution>
					<execution>
						<id>compress-javascript</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>scripts/compress-javascript</executable>
						</configuration>
					</execution>
					<execution>
						<id>compress-css</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>scripts/compress-css</executable>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/main/clojure</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
